# pfr-reactor-sizer

./: .gitignore  README.md  RELEASE_NOTES.md  build_exe.py  gui_disasm.txt  pfrsizer_gui.spec  pyproject.toml  requirements.txt  run_gui.py
examples/: basic_usage.py
pfrsizer/: __init__.py  cli.py  components.py  core.py  gui.py  models.py  nist_webbook.py  plot.py  pubchem.py  reaction_parser.py  solvers.py
